<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0eff5"
    android:orientation="vertical"
    tools:context="com.appscomm.selence.fragment.SettingFragment">


    <include layout="@layout/layout_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/menu_setting_menstruation_tip1"
        android:textSize="14sp" />

    <RelativeLayout
        android:id="@+id/rl_menstruation_days"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_menstruation_days"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/menstruation_days" />

        <TextView
            android:id="@+id/tv_menstruation_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_menstruation_days"
            android:text="@string/menu_setting_menstruation_days"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/setting_text_color"
            android:textSize="14sp"
            android:layout_toLeftOf="@+id/iv_menstruation_days_arrow"
            android:layout_marginRight="20dp"
            android:layout_alignTop="@+id/tv_menstruation_days"
            android:text="@string/menu_setting_menstruation"
            />

        <ImageView
            android:id="@+id/iv_menstruation_days_arrow"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/arrow" />

    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/menu_setting_menstruation_tip2"
        android:textSize="14sp" />

    <RelativeLayout
        android:id="@+id/rl_menstruation_period"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_menstruation_period"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/menstruation_period" />

        <TextView
            android:id="@+id/tv_menstruation_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_menstruation_period"
            android:text="@string/menu_setting_menstruation_period"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/setting_text_color"
            android:textSize="14sp"
            android:layout_toLeftOf="@+id/iv_menstruation_period_arrow"
            android:layout_marginRight="20dp"
            android:layout_alignTop="@+id/tv_menstruation_period"
            android:text="@string/menu_setting_menstruation"
            />

        <ImageView
            android:id="@+id/iv_menstruation_period_arrow"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/arrow" />

    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/menu_setting_menstruation_tip3"
        android:textSize="14sp" />

    <RelativeLayout
        android:id="@+id/rl_menstruation_preday"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_menstruation_preday"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/menstruation_preday" />

        <TextView
            android:id="@+id/tv_menstruation_preday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_menstruation_preday"
            android:text="@string/menu_setting_menstruation_preday"
            android:textColor="@android:color/black" />
        <TextView
            android:id="@+id/tv_preday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/setting_text_color"
            android:textSize="14sp"
            android:layout_toLeftOf="@+id/iv_menstruation_preday_arrow"
            android:layout_marginRight="20dp"
            android:layout_alignTop="@+id/tv_menstruation_preday"
            android:text="@string/menu_setting_menstruation"
            />

        <ImageView
            android:id="@+id/iv_menstruation_preday_arrow"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/arrow" />

    </RelativeLayout>

</LinearLayout>
