<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@null"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_sms_dialog"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="请输入需要绑定的手机号码"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            />

        <EditText
            android:id="@+id/et_tel"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_sms_dialog"
            android:gravity="center"
            android:hint="@string/tel_tips"
            android:layout_gravity="center"
            android:maxLength="20"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancle"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/cancle"
                android:background="@drawable/bg_dialog_btn_cancle"
                android:gravity="center"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="16sp" />


            <Button
                android:id="@+id/btn_accept"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/bg_dialog_btn_accept"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/sure"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>