<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="bottom"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
       >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/activity_split" />

        <ToggleButton
            android:id="@+id/tgb_index"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/toggle_menu_home_selector"
            android:textColor="@drawable/toggle_menu_text_selector"
            android:textOff="@string/menu_home"
            android:textOn="@string/menu_home"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/activity_split" />

        <ToggleButton
            android:id="@+id/tgb_setting"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/toggle_menu_band_selector"
            android:textColor="@drawable/toggle_menu_text_selector"
            android:textOff="@string/menu_setting"
            android:textOn="@string/menu_setting"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/activity_split" />

        <ToggleButton
            android:id="@+id/tgb_calendar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/toggle_menu_me_selector"
            android:textColor="@drawable/toggle_menu_text_selector"
            android:textOff="@string/menu_calendar"
            android:textOn="@string/menu_calendar"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>